fix css in dark mode

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -28,10 +28,7 @@
   --ifm-color-primary-lighter: #48a9f5;
   --ifm-color-primary-lightest: #70bbf7;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-  --ifm-background-color: #8c3232;
-}
 
-[data-theme='dark']{
   .vertical-timeline-element--education .vertical-timeline-element-content {
     border-top: 3px solid #e91e63;
     background-color: #353942;
@@ -57,7 +54,6 @@
     border-right: 7px solid #353942 !important;
   }
 
-
   .vertical-timeline-element--open-source .vertical-timeline-element-content {
     border-top: 3px solid #33bb0c;
     background-color: #353942;
@@ -79,39 +75,45 @@
 
 }
 /* Light */
+[data-theme='light'] {
+  .vertical-timeline-element--work .vertical-timeline-element-content {
+    border-top: 3px solid #2196f3;
+    background-color: #f3f3f3;
+  }
 
-.vertical-timeline-element--work .vertical-timeline-element-content {
-  border-top: 3px solid #2196f3;
-  background-color: #f3f3f3;
-}
-/* Chips */
-.vertical-timeline-element-content .MuiChip-root{
-  margin-right: 4px;
-  margin-bottom: 4px;
-  background-color: #f3f3f3;
-}
-.vertical-timeline-element--work .vertical-timeline-element-content a {
-  color: #2196f3;
-}
+  /* Chips */
 
-.vertical-timeline-element--education .vertical-timeline-element-content {
-  border-top: 3px solid #e91e63;
-  background-color: #f3f3f3;
+  .vertical-timeline-element-content .MuiChip-root {
+    margin-right: 4px;
+    margin-bottom: 4px;
+    background-color: #f3f3f3;
+  }
 
-}
-.vertical-timeline-element--education .vertical-timeline-element-content a {
-  color: #e91e63;
-}
+  .vertical-timeline-element--work .vertical-timeline-element-content a {
+    color: #2196f3;
+  }
 
-.vertical-timeline-element--open-source .vertical-timeline-element-content {
-  border-top: 3px solid #33bb0c;
-  background-color: #f3f3f3;
-}
-.vertical-timeline-element--open-source .vertical-timeline-element-content a {
-  color: #33bb0c;
-}
+  .vertical-timeline-element--education .vertical-timeline-element-content {
+    border-top: 3px solid #e91e63;
+    background-color: #f3f3f3;
 
-.vertical-timeline-element-content-arrow {
-  border-right: 7px solid #f3f3f3 !important;
+  }
+
+  .vertical-timeline-element--education .vertical-timeline-element-content a {
+    color: #e91e63;
+  }
+
+  .vertical-timeline-element--open-source .vertical-timeline-element-content {
+    border-top: 3px solid #33bb0c;
+    background-color: #f3f3f3;
+  }
+
+  .vertical-timeline-element--open-source .vertical-timeline-element-content a {
+    color: #33bb0c;
+  }
+
+  .vertical-timeline-element-content-arrow {
+    border-right: 7px solid #f3f3f3 !important;
+  }
 }
 
